{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 57,
  "lineage": "47f5b873-aa04-5e4f-0a57-d70754a0f7e7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-21T18:02:01.855-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/csye6225-ns-cloud-dev/global/firewalls/webapp-firewall",
            "log_config": [],
            "name": "webapp-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225-ns-cloud-dev/global/networks/mainvpc",
            "priority": 1000,
            "project": "csye6225-ns-cloud-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225-ns-cloud-dev/global/firewalls/webapp-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "webapp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "enable_ula_internal_ipv6": false,
            "id": "projects/csye6225-ns-cloud-dev/global/networks/mainvpc",
            "mtu": 0,
            "name": "mainvpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "471923605106301066",
            "project": "csye6225-ns-cloud-dev",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225-ns-cloud-dev/global/networks/mainvpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/csye6225-ns-cloud-dev/global/routes/webapp-route",
            "name": "webapp-route",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225-ns-cloud-dev/global/networks/mainvpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/csye6225-ns-cloud-dev/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "csye6225-ns-cloud-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225-ns-cloud-dev/global/routes/webapp-route",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-21T08:36:12.946-08:00",
            "gateway_address": "192.168.1.1",
            "id": "projects/csye6225-ns-cloud-dev/regions/us-east1/subnetworks/webapp",
            "ip_cidr_range": "192.168.1.0/24",
            "name": "webapp",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225-ns-cloud-dev/global/networks/mainvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "csye6225-ns-cloud-dev",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225-ns-cloud-dev/regions/us-east1/subnetworks/webapp",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-21T08:36:13.933-08:00",
            "gateway_address": "192.168.2.1",
            "id": "projects/csye6225-ns-cloud-dev/regions/us-east1/subnetworks/db",
            "ip_cidr_range": "192.168.2.0/24",
            "name": "db",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225-ns-cloud-dev/global/networks/mainvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "csye6225-ns-cloud-dev",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225-ns-cloud-dev/regions/us-east1/subnetworks/db",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.mainvpc"
          ]
        }
      ]
    }
  ]
}